added bility to parse multiple date formatts tested with other unrelated csv and works fine

--- a/src/TODO
+++ b/src/TODO
@@ -2,7 +2,7 @@
 
 2) add a x to Y graph mapping rather than only time-series
 
-3) add ability to overlap many graphs
+3) DONE add ability to overlap many graphs
 
 4) test with other format csv files
 
