--- a/src/TODO
+++ b/src/TODO
@@ -3,7 +3,7 @@
 2) add a x to Y graph mapping rather than only time-series
     - maybe in a new page
 
-3) add moving averages 50d 14d 200d day ect..
+3) DONE add moving averages 50d 14d 200d day ect..
 
 3) DONE add ability to overlap many graphs
 
