--- a/src/TODO
+++ b/src/TODO
@@ -14,6 +14,8 @@
 
 6) DONE add ability to load data from Yahoo on the fly
 
+7) split data to other files as the GUI file is becoming large
+
 7) add unit tests
 
 import unittest
